--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,7 +109,7 @@ jobs:
 
       - run:
           name: Populate EnvFile
-          ommand: bash export.sh
+          command: bash export.sh
 
   ios:
     macos:
